Fix date save directly to DB as human readable

--- a/css/style.css
+++ b/css/style.css
@@ -193,6 +193,7 @@ input#name, select {
 
 .flashmessage-with-close-btn__box p {
 	padding: 2em;
+	font-size: 1.5em;
 }
 
 .flashmessage-with-close-btn__btn {
